# Reddit-Business-Signal-Radar

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/next/: README.md  (+3 more)
configs/: app.toml  pipeline.toml  sources.json
docs/: architecture.md  dashboard_metrics.md  data_contracts.md  pipeline_operations.md  source_strategy.md
scripts/: 01_clean_reddit_posts.py  02_clean_internal_reference.py  03_build_cluster_profiles.py  04_build_brand_registry.py  05_tokenize_and_extract_phrases.py  06_run_sentiment.py  07_extract_entities.py  08_match_226_clusters.py  09_build_brand_post_index.py  10_build_weekly_metrics.py  11_build_cluster_entity_metrics.py  11_build_reranker_training_pairs.py  12_build_cluster_scores.py  12_train_cluster_reranker.py  13_fetch_brand_logos.py  build_bot_signal_export.py  build_brand_logo_map.py  build_dashboard_bundle.py  build_ops_team_category_mapping.py  build_tiktok_listed_brand_index.py  build_web_dashboard_bundle.py  install_local_cron.sh  merge_recent_raw_reddit.py  pipeline.py  publish_streamlit_snapshot.py  run_daily_live.py  run_nlp_signal_pipeline.py  run_nlp_update.py  run_product_app.py  run_weekly_backfill.py  scrape_reddit.py  sync_product_app_data.py
tests/: test_bot_signal_export.py  test_clean_reddit_fallback_columns.py  test_dashboard_bundle_noise_filters.py  test_dashboard_bundle_post_keys.py  test_dashboard_generated_contract.py  test_keyword_post_index.py  test_ops_team_category_mapping.py  test_sparkle_contract.py  test_sync_keyword_index_validation.py  test_tiktok_listed_brand_index.py
(+867 files in other folders)
