[project]
name = "reddit-business-signal-radar"
version = "0.1.0"
description = "Reddit business signal collection, processing, and dashboard pipeline."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "requests>=2.31.0",
  "numpy>=1.24.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
